# kinetic-photo

./: CNAME  README.md
.github/workflows/: publish-container.yml
frame/: .gitignore  MANIFEST.in  Makefile  Pipfile  config.yml  dev_config.yml  setup.cfg  setup.cfg.template
frame/src/kinetic_frame/: client.py  config.py  photo_storage.py  player.py
server/: .gitignore  CLAUDE.md  Dockerfile  MANIFEST.in  Makefile  Pipfile  README.md  config.yml  config_dev.yml  setup.cfg  setup.cfg.template
server/processors/boost-monocular-depth/: Dockerfile  README.md  requirements.txt
server/src/: cli.py  common.py  containers.py  content.py  db.py  pipelines.py  processors.py  rules.py  streams.py
server/src/db/sql/: 001_initial.sql  002_streams.sql  003_content.sql
server/src/integrations/: __init__.py  googlephotos.py
server/src/kinetic_server/: auxiliarycache.py  cli.py  common.py  containers.py  content.py  db.py  depthcache.py  endpoints.py  fader.py  frames.py  frontend.py  logging.ini  object_store.py  pipelines.py  pre_renders.py  processors.py  rules.py  server.py  streams.py  uploads.py  wsgi.py
server/src/kinetic_server/db/sql/: 001_initial.sql  002_depth_cache.sql  002_prerender.sql  002_streams.sql  003_content.sql  003_pre_render_frame.sql  004_aux.sql  004_pipelines.sql  005_frames.sql  005_poster.sql  005_thumbnail.sql  006_fades.sql  007_content_source_id_idx.sql  008_uploads.sql  009_video_content_versions.sql
server/src/kinetic_server/integrations/: __init__.py  common.py  googlephotos.py
server/src/kinetic_server/steps/: __init__.py  _apis.py  copy_video.py  depth.py  fade.py  filter.py  filter_seen.py  gradio_clients.py  mesh.py  photo_inpainting.py  step.py
server/src/kinetic_server/ui/: __init__.py  frames.py  gallery.py  layout.py
