[metadata]
name = kinetic-server
version = 0.0.1
author = Lou Kratz
author-email = inbound at lou.dev
home-page = https://github.com/lou-k/kinetic-photo
description = "A picture frame that makes your photos move using AI"
license = GPLv3
license-file = LICENSE
platform = any
keywords = kinetic photo raspberry pi ai 
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.11
    Topic :: Software Development :: Libraries :: Python Modules
project_urls = 
    Documentation = https://github.com/lou-k/kinetic-photo/blob/main/README.md
    Bug Tracker = https://github.com/lou-k/kinetic-photo/issues
    Changelog = https://github.com/lou-k/kinetic-photo/commits/main

[options.entry_points]
console_scripts =
    kinetic-photo-cli = kinetic_server:cli.main

[options.packages.find]
where=src

[options]
packages=find:
package_dir=
    =src/
include_package_data = True
install_requires =	
	anyio>=3.7.0 
	blinker>=1.6.2 
	cachetools>=5.3.1 
	certifi>=2023.5.7 
	charset-normalizer>=3.1.0 
	click>=8.1.3 
	dataclasses-json>=0.5.8
	decorator>=5.1.1 
	dependency-injector[yaml]>=4.41.0
	disk-objectstore>=0.6.0
	filelock>=3.12.2 
	flask>=2.3.2
	fsspec>=2023.6.0 
	google-api-core>=2.11.0 
	google-api-python-client>=2.88.0 
	google-auth>=2.19.1 
	google-auth-httplib2>=0.1.0
	google-auth-oauthlib>=1.0.0 
	googleapis-common-protos>=1.59.1 
	gphotospy>=0.2.1
	gradio-client>=0.2.6
	greenlet>=2.0.2 
	h11>=0.14.0 
	httpcore>=0.17.2 
	httplib2>=0.22.0 
	httpx>=0.24.1 
	huggingface-hub>=0.15.1 
	idna>=3.4 
	itsdangerous>=2.1.2 
	jinja2>=3.1.2 
	jsonpath-ng>=1.5.3
	markupsafe>=2.1.3 
	marshmallow>=3.19.0 
	marshmallow-enum>=1.5.1
	mypy-extensions>=1.0.0 
	numpy>=1.24.3 
	oauth2client>=4.1.3
	oauthlib>=3.2.2 
	packaging>=23.1 
	pandas>=2.0.2
	pillow>=9.5.0
	ply>=3.11
	protobuf>=4.23.2 
	pyasn1>=0.5.0 
	pyasn1-modules>=0.3.0 
	pyparsing>=3.0.9 
	python-dateutil>=2.8.2 
	python-magic>=0.4.27
	pytz>=2023.3
	pyyaml>=6.0
	requests>=2.31.0 
	requests-oauthlib>=1.3.1 
	rsa>=4.9 
	six>=1.16.0 
	sniffio>=1.3.0 
	sqlalchemy>=1.4.48 
	tqdm>=4.65.0
	typing-extensions>=4.6.3 
	typing-inspect>=0.9.0
	tzdata>=2023.3 
	uritemplate>=4.1.1 
	urllib3>=1.26.16 
	uwsgi>=2.0.21
	websockets>=11.0.3 
	werkzeug>=2.3.6 
