[metadata]
name = kinetic-server
version = 0.0.1
author = Lou Kratz
author-email = inbound at lou.dev
home-page = https://github.com/lou-k/kinetic-photo
description = "A picture frame that makes your photos move using AI"
license = GPLv3
license-file = LICENSE
platform = any
keywords = kinetic photo raspberry pi ai 
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.11
    Topic :: Software Development :: Libraries :: Python Modules
project_urls = 
    Documentation = https://github.com/lou-k/kinetic-photo/blob/main/README.md
    Bug Tracker = https://github.com/lou-k/kinetic-photo/issues
    Changelog = https://github.com/lou-k/kinetic-photo/commits/main

[options.entry_points]
console_scripts =
    kinetic-photo-cli = kinetic_server:cli.main

[options.packages.find]
where=src

[options]
packages=find:
package_dir=
    =src/
include_package_data = True
install_requires =	
	annotated-types>=0.7.0
	anyio>=4.8.0
	cachetools>=5.5.2
	certifi>=2025.1.31
	charset-normalizer>=3.4.1
	click>=8.1.8
	dataclasses-json>=0.6.7
	dependency-injector[yaml]>=4.46.0
	fastapi>=0.115.11
	filelock>=3.18.0
	fsspec>=2025.3.0
	google-api-core>=2.24.2
	google-api-python-client>=2.164.0
	google-auth>=2.38.0
	google-auth-httplib2>=0.2.0
	google-auth-oauthlib>=1.2.1
	googleapis-common-protos>=1.69.1
	gphotospy>=0.2.1
	gradio-client>=1.8.0
	h11>=0.14.0
	httpcore>=1.0.7
	httplib2>=0.22.0
	httpx>=0.28.1
	huggingface-hub>=0.29.3
	idna>=3.10
	jsonpath-ng>=1.7.0
	marshmallow>=3.26.1
	mypy-extensions>=1.0.0
	numpy>=2.2.3
	oauth2client>=4.1.3
	oauthlib>=3.2.2
	packaging>=24.2
	pandas>=2.2.3
	pillow>=11.1.0
	ply>=3.11
	proto-plus>=1.26.1
	protobuf>=5.29.3
	pyasn1>=0.6.1
	pyasn1-modules>=0.4.1
	pydantic>=2.10.6
	pydantic-core>=2.27.2
	pyparsing>=3.2.1
	python-dateutil>=2.9.0.post0
	python-magic>=0.4.27
	pytz>=2025.1
	pyyaml>=6.0.2
	requests>=2.32.3
	requests-oauthlib>=2.0.0
	rsa>=4.9
	setuptools>=76.0.0
	six>=1.17.0
	sniffio>=1.3.1
	starlette>=0.46.1
	tqdm>=4.67.1
	typing-extensions>=4.12.2
	typing-inspect>=0.9.0
	tzdata>=2025.1
	uritemplate>=4.1.1
	urllib3>=2.3.0
	uvicorn[standard]>=0.34.0
	websockets>=15.0.1
