[metadata]
name = kinetic-server
version = 0.0.1
author = Lou Kratz
author-email = inbound at lou.dev
home-page = https://github.com/lou-k/kinetic-photo
description = "A picture frame that makes your photos move using AI"
license = GPLv3
license-file = LICENSE
platform = any
keywords = kinetic photo raspberry pi ai 
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.11
    Topic :: Software Development :: Libraries :: Python Modules
project_urls = 
    Documentation = https://github.com/lou-k/kinetic-photo/blob/main/README.md
    Bug Tracker = https://github.com/lou-k/kinetic-photo/issues
    Changelog = https://github.com/lou-k/kinetic-photo/commits/main

[options.entry_points]
console_scripts =
    kinetic-photo-cli = kinetic_server:cli.main

[options.packages.find]
where=src

[options]
packages=find:
package_dir=
    =src/
include_package_data = True
install_requires =	
	aiofiles>=24.1.0
	aiohappyeyeballs>=2.6.1
	aiohttp>=3.11.13
	aiosignal>=1.3.2
	annotated-types>=0.7.0
	anyio>=4.8.0
	attrs>=25.3.0
	bidict>=0.23.1
	cachetools>=5.5.2
	certifi>=2025.1.31
	charset-normalizer>=3.4.1
	click>=8.1.8
	dataclasses-json>=0.6.7
	dependency-injector[yaml]>=4.46.0
	docutils>=0.21.2
	fastapi>=0.115.11
	filelock>=3.18.0
	frozenlist>=1.5.0
	fsspec>=2025.3.0
	google-api-core>=2.24.2
	google-api-python-client>=2.164.0
	google-auth>=2.38.0
	google-auth-httplib2>=0.2.0
	google-auth-oauthlib>=1.2.1
	googleapis-common-protos>=1.69.1
	gphotospy>=0.2.1
	gradio-client>=1.8.0
	h11>=0.14.0
	httpcore>=1.0.7
	httplib2>=0.22.0
	httptools>=0.6.4
	httpx>=0.28.1
	huggingface-hub>=0.29.3
	idna>=3.10
	ifaddr>=0.2.0
	itsdangerous>=2.2.0
	jinja2>=3.1.6
	jsonpath-ng>=1.7.0
	markdown2>=2.5.3
	markupsafe>=3.0.2
	marshmallow>=3.26.1
	multidict>=6.1.0
	mypy-extensions>=1.0.0
	nicegui>=2.12.1
	numpy>=2.2.4
	oauth2client>=4.1.3
	oauthlib>=3.2.2
	orjson>=3.10.15
	packaging>=24.2
	pandas>=2.2.3
	pillow>=11.1.0
	ply>=3.11
	propcache>=0.3.0
	proto-plus>=1.26.1
	protobuf>=5.29.3
	pscript>=0.7.7
	pyasn1>=0.6.1
	pyasn1-modules>=0.4.1
	pydantic>=2.10.6
	pydantic-core>=2.27.2
	pygments>=2.19.1
	pyparsing>=3.2.1
	python-dateutil>=2.9.0.post0
	python-dotenv>=1.0.1
	python-engineio>=4.11.2
	python-magic>=0.4.27
	python-multipart>=0.0.20
	python-socketio[asyncio-client]>=5.12.1
	pytz>=2025.1
	pyyaml>=6.0.2
	requests>=2.32.3
	requests-oauthlib>=2.0.0
	rsa>=4.9
	setuptools>=76.0.0
	simple-websocket>=1.1.0
	six>=1.17.0
	sniffio>=1.3.1
	starlette>=0.46.1
	tqdm>=4.67.1
	typing-extensions>=4.12.2
	typing-inspect>=0.9.0
	tzdata>=2025.1
	uritemplate>=4.1.1
	urllib3>=2.3.0
	uvicorn[standard]>=0.34.0
	uvloop>=0.21.0
	vbuild>=0.8.2
	watchfiles>=1.0.4
	websockets>=15.0.1
	wsproto>=1.2.0
	yarl>=1.18.3
